mudando para PRODUCAO

--- a/04-esocial-lagoa-salgada/config/application.properties
+++ b/04-esocial-lagoa-salgada/config/application.properties
@@ -1,5 +1,5 @@
 esocialjt.cnpj-empregador=08162869
-esocialjt.ambiente=PRODUCAO_RESTRITA
+esocialjt.ambiente=PRODUCAO
 esocialjt.arquivoCertificado=/config/esocial.pfx
 esocialjt.senhaCertificado=12345678
 
