--- a/11-esocial-cam-taipu/config/application.properties
+++ b/11-esocial-cam-taipu/config/application.properties
@@ -1,5 +1,5 @@
 esocialjt.cnpj-empregador=11982568
-esocialjt.ambiente=PRODUCAO_RESTRITA
+esocialjt.ambiente=PRODUCAO
 esocialjt.arquivoCertificado=/config/esocial.pfx
 esocialjt.senhaCertificado=ARSOLUTI
 
