--- a/03-esocial-sao-bento/config/application.properties
+++ b/03-esocial-sao-bento/config/application.properties
@@ -1,5 +1,5 @@
 esocialjt.cnpj-empregador=08114514
-esocialjt.ambiente=PRODUCAO_RESTRITA
+esocialjt.ambiente=PRODUCAO
 esocialjt.arquivoCertificado=/config/esocial.pfx
 esocialjt.senhaCertificado=12345678
 
