--- a/05-esocial-lagoa-pedra/config/application.properties
+++ b/05-esocial-lagoa-pedra/config/application.properties
@@ -1,5 +1,5 @@
 esocialjt.cnpj-empregador=08143026
-esocialjt.ambiente=PRODUCAO_RESTRITA
+esocialjt.ambiente=PRODUCAO
 esocialjt.arquivoCertificado=/config/esocial.pfx
 esocialjt.senhaCertificado=123456
 
