--- a/07-esocial-galinhos/config/application.properties
+++ b/07-esocial-galinhos/config/application.properties
@@ -1,5 +1,5 @@
 esocialjt.cnpj-empregador=08110991
-esocialjt.ambiente=PRODUCAO_RESTRITA
+esocialjt.ambiente=PRODUCAO
 esocialjt.arquivoCertificado=/config/esocial.pfx
 esocialjt.senhaCertificado=pmg2021
 
