--- a/08-esocial-caicara/config/application.properties
+++ b/08-esocial-caicara/config/application.properties
@@ -1,5 +1,5 @@
 esocialjt.cnpj-empregador=01612375
-esocialjt.ambiente=PRODUCAO_RESTRITA
+esocialjt.ambiente=PRODUCAO
 esocialjt.arquivoCertificado=/config/esocial.pfx
 esocialjt.senhaCertificado=12345678
 
