--- a/09-esocial-brejinho/config/application.properties
+++ b/09-esocial-brejinho/config/application.properties
@@ -1,5 +1,5 @@
 esocialjt.cnpj-empregador=08161614
-esocialjt.ambiente=PRODUCAO_RESTRITA
+esocialjt.ambiente=PRODUCAO
 esocialjt.arquivoCertificado=/config/esocial.pfx
 esocialjt.senhaCertificado=1234
 
