--- a/12-esocial-cam-lagoa-salgada/config/application.properties
+++ b/12-esocial-cam-lagoa-salgada/config/application.properties
@@ -1,5 +1,5 @@
 esocialjt.cnpj-empregador=10718419
-esocialjt.ambiente=PRODUCAO_RESTRITA
+esocialjt.ambiente=PRODUCAO
 esocialjt.arquivoCertificado=/config/esocial.pfx
 esocialjt.senhaCertificado=CNPJ10718
 
