--- a/04-esocial-lagoa-salgada/config/application.properties
+++ b/04-esocial-lagoa-salgada/config/application.properties
@@ -1,7 +1,7 @@
 esocialjt.cnpj-empregador=08162869
 esocialjt.ambiente=PRODUCAO
 esocialjt.arquivoCertificado=/config/esocial.pfx
-esocialjt.senhaCertificado=12345678
+esocialjt.senhaCertificado=171231
 
 esocialjt.tpInscIdeTransmissor=1
 esocialjt.nrInscIdeTransmissor=08162869000144
