--- a/09-esocial-brejinho/config/application.properties
+++ b/09-esocial-brejinho/config/application.properties
@@ -1,7 +1,7 @@
 esocialjt.cnpj-empregador=08161614
 esocialjt.ambiente=PRODUCAO
 esocialjt.arquivoCertificado=/config/esocial.pfx
-esocialjt.senhaCertificado=1234
+esocialjt.senhaCertificado=12345678
 
 esocialjt.tpInscIdeTransmissor=1
 esocialjt.nrInscIdeTransmissor=08161614000167
