--- a/04-esocial-lagoa-salgada/config/application.properties
+++ b/04-esocial-lagoa-salgada/config/application.properties
@@ -1,6 +1,6 @@
 esocialjt.cnpj-empregador=08162869
 esocialjt.ambiente=PRODUCAO
-esocialjt.arquivoCertificado=/config/esocial.pfx
+esocialjt.arquivoCertificado=/config/esocial.p12
 esocialjt.senhaCertificado=171231
 
 esocialjt.tpInscIdeTransmissor=1
